--- a/my-project/package.json
+++ b/my-project/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.1",
     "animejs": "^3.2.2",
+    "framer-motion": "^11.17.0",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
